--- a/README.textile
+++ b/README.textile
@@ -11,6 +11,9 @@ h3. Features of LeaveNotice
 
 h3. Changelog
 
+h4. v. 1.1.4 (fork from original)
+* Changed the unload function to .on("unload") to fix an issue with jquery 3+
+
 h4. v. 1.1.3
 * Added an option to open links in a new window through the dialog. This behavior was possible before through the @linkString@ option, but I have made it more easily available now through a new option called @newWindow@. *Note:* The experience this creates "is":http://www.nngroup.com/articles/the-top-ten-web-design-mistakes-of-1999/ "not":http://www.nngroup.com/articles/top-10-mistakes-web-design/ "ideal":http://www.currybet.net/cbet_blog/2012/08/never-open-external-links-in-new-windows.php (it breaks the back button), but I've had enough requests that I've added it.
 
